tests/script_runtime_errors/match_no_clause_hit/error.txt
Error: 
    1 | match true of
    2 |   case false => true
    3 | end
      | ^^^ A match expression executed but no clause matched
      |     NOTE: Consider adding a `default => null` clause at the end of your match or validate full coverage beforehand.
